--- a/hurtumartworkz/package.json
+++ b/hurtumartworkz/package.json
@@ -41,7 +41,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "tailwindcss-animated": "^1.1.2"
   },
   "overrides": {
     "body-parser": "1.20.3",
